--- a/modules/permeability/permeability.html
+++ b/modules/permeability/permeability.html
@@ -1,17 +1,97 @@
-<div class="module">
-<h3>ПРОНИЦАЕМОСТЬ</h3>
-<p>Здесь мы будем тестировать ajax запрос и работу подогружаемонго модуля.</p>
+<div>
+    <h3 align="center">Проницаемость</h3>
+    <p align="center"><small>Конвертер единиц измерения проницаемости горных пород</small></p>
+    <div class="module">
+        <div class="input-group">
+            <input v-on:input="convert($event.target.value,$event.target.id)" v-on:focus="selectAll" type="text" class="form-control permeability" placeholder="милидарси" aria-describedby="basic-addon2" id="md"
+                :value="obj.md">
+            <span class="input-group-addon" id="basic-addon2">мД</span>
+        </div>
+        <br>
+        <div class="input-group">
+            <input v-on:input="convert($event.target.value,$event.target.id)" v-on:focus="selectAll" type="text" class="form-control  permeability" placeholder="дарси" aria-describedby="basic-addon2" id="d"
+                :value="obj.d">
+            <span class="input-group-addon" id="basic-addon2">Д</span>
+        </div>
+        <br>
+        <div class="input-group">
+            <input v-on:input="convert($event.target.value,$event.target.id)" v-on:focus="selectAll" type="text" class="form-control  permeability" placeholder="микрометр кв." aria-describedby="basic-addon2" id="mkm"
+                :value="obj.mkm">
+            <span class="input-group-addon" id="basic-addon2">мкм<sup>2</sup></span>
+        </div>
+        <br>
+        <div class="input-group">
+            <input v-on:input="convert($event.target.value,$event.target.id)" v-on:focus="selectAll" type="text" class="form-control  permeability" placeholder="микрометр кв." aria-describedby="basic-addon2" id="mkm2"
+                :value="obj.mkm2">
+            <span class="input-group-addon" id="basic-addon2">&#215 10<sup>-3</sup> мкм<sup>2</sup></span>
+        </div>
+        <br>
+        <div class="input-group">
+            <input v-on:input="convert($event.target.value,$event.target.id)" v-on:focus="selectAll" type="text" class="form-control permeability" placeholder="метр кв." aria-describedby="basic-addon2" id="m2"
+                :value="obj.m2">
+            <span class="input-group-addon" id="basic-addon2">&#215 10<sup>-12</sup> м<sup>2</sup></span>
+        </div>
+        <br>
+        <small><b>По величине проницаемости продуктивные пласты делятся на:</b><br>
+        - низкопроницаемые (от 0 до 100 мД);<br>
+        - среднепроницаемые (от 100 мД до 500 мД);<br>
+        - высокопроницаемые (более 500 мД).<br>
+        <br>
+        <b>Существует деление на 5 классов коллекторов (мкм<sup>2</sup>):</b><br>
+        - очень хорошо проницаемые (> 1);<br>
+        - хорошо проницаемые (0.1 - 1);<br>
+        - средне проницаемые (0.01 - 0.1);<br> - слабопроницаемые (0.001 - 0.01);<br>
+        - плохопроницаемые (< 0.001).<br></small>
+        <div class="text-right"><a href="http://neftegaz.ru/tech_library/view/4601-Pronitsaemost-gornyh-porod-plasta">Проницаемость</a></div>
+    </div>
 </div>
+
+<!-- Окончание html модуля -->
 <script>
-    var module = new Vue ({
+    /* Проницаемость (permeability)
+    Дарси / 1 / permeability_d
+    Милидарси / 1000 / permeability_md
+    Микрометры кв. / 1.0*10^-3 / permeability_mkm2
+    Метры кв. / 1.0 / permeability_m2
+    Микрометры кв.*10^-3 / 0. / permeability_mkm
+    */
+    var module = new Vue({
         el: ".module",
         data: {
-            a: 1,
-            b: 2
+            obj: {
+                d: 1,
+                md: 1000,
+                mkm2: 1.0,
+                m2: 1.0,
+                mkm: 0.001,
+                },
+            id: ["d", "md", "mkm2", "m2", "mkm"],
+            const: [1, 1000, 1.0, 1.0, 0.001],
         },
-        methods:{
-            test_func: function(){
-                console.log(this.a+this.b);
+        methods: {
+            convert: function (val, id) {
+                count = this.id.length;
+                id_of = this.id.indexOf(id);
+                c = Big(this.const[id_of]);
+                val = Big(val);
+                result = [];
+                for (i = 0; i < count; i++) {
+                    const_for = Big(this.const[i]);
+                    result[i] = Number(val.div(c).times(const_for));
+                }
+
+                for (i = 0; i < count; i++) {
+                    //if (id != this.id[i]){
+                    //console.log(id+' not '+this.id[i]+'  i='+i);
+                    this.obj[this.id[i]] = result[i];
+                    //console.log(this.obj[this.id[i]]);
+                    // }
+                }
+            },
+            selectAll: function(event){
+                setTimeout(function () {
+      	            event.target.select()
+                                        }, 0);
             }
         }
     })
