--- a/modules/permeability/permeability.html
+++ b/modules/permeability/permeability.html
@@ -49,11 +49,11 @@
 <!-- Окончание html модуля -->
 <script>
     /* Проницаемость (permeability)
-    Дарси / 1 / permeability_d
-    Милидарси / 1000 / permeability_md
-    Микрометры кв. / 1.0*10^-3 / permeability_mkm2
-    Метры кв. / 1.0 / permeability_m2
-    Микрометры кв.*10^-3 / 0. / permeability_mkm
+    Дарси / 1 / d
+    Милидарси / 1000 / md
+    Микрометры кв. / 1.0*10^-3 / mkm2
+    Метры кв. / 1.0 / m2
+    Микрометры кв.*10^-3 / 0. / mkm
     */
     var module = new Vue({
         el: ".module",
